--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1166,16 +1166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 4f4b402] 7-movethatfile\n",
-      " 2 files changed, 122 insertions(+)\n",
-      " create mode 100755 0x00-shell_basics/7-movethatfile\n"
+      "[main 33ba3fc] 7-everybody\n",
+      " 2 files changed, 42 insertions(+), 39 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/7-everybody\n"
      ]
     },
     {
@@ -1183,14 +1183,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f31a154..4f4b402  main -> main\n"
+      "   3c9fdc1..33ba3fc  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"7-movethatfile\"\n",
+    "git commit -m \"7-everybody\"\n",
     "git push"
    ]
   },
@@ -1203,7 +1203,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 8.Bye bye Betty </h4>\n",
+    "<h4> 8. James Bond </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1213,15 +1213,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Delete the file betty.\n",
+    "##### Write a script that sets the permission to the file hello as follows:\n",
     "\n",
-    "* The file betty is in /tmp/my_first_directory\n",
+    "* Owner: no permission at all\n",
+    "* Group: no permission at all\n",
+    "* Other users: all the permissions\n",
     "\n",
-    "##### Example:\n",
+    "The file `hello` will be in the working directory You are not allowed to use commas for this script\n",
+    "\n",
     "```bash\n",
-    "$ ./8-firstdelete\n",
-    "$ ls /tmp/my_first_directory/\n",
-    "$\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:40 8-James_Bond\n",
+    "-rwxr-x--x 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ ./8-James_Bond \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:40 8-James_Bond\n",
+    "-------rwx 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
@@ -1233,56 +1243,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/8-firstdelete\n"
+      "Writing 0x01-shell_permissions/8-James_Bond\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/8-firstdelete\n",
+    "%%file 0x01-shell_permissions/8-James_Bond\n",
     "#!/bin/bash\n",
-    "rm /tmp/my_first_directory/betty"
+    "chmod 007 hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove '/tmp/my_first_directory/betty': No such file or directory\n"
+      "bash: line 2: .0x01-shell_permissions/8-James_Bond: No such file or directory\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_first_directory\n",
-      "pyright-9863-3yBGUfZlxDqq\n",
-      "pyright-9863-9QzMys6VU6ZY\n",
-      "pyright-9863-gyFPUbndjCI5\n",
-      "python-languageserver-cancellation\n",
-      "snap-private-tmp\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-ModemManager.service-2xfSxf\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-logind.service-vJoCkf\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-resolved.service-n0ZkLf\n"
+      "total 164\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  2 14:09 0x00-shell_basics\n",
+      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:10 0x01-shell_permissions\n",
+      "-rw-r--r-- 1 elkomy elkomy 72813 Mar  9 20:10 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
+      "-rwxr-xr-x 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
+      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
+      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/8-firstdelete\n",
-    "./0x00-shell_basics/8-firstdelete\n",
-    "ls /tmp/"
+    "chmod u+x 0x01-shell_permissions/8-James_Bond\n",
+    ".0x01-shell_permissions/8-James_Bond\n",
+    "ls -l"
    ]
   },
   {
@@ -1311,7 +1321,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"8-firstdelete\"\n",
+    "git commit -m \"8. James Bond\"\n",
     "git push"
    ]
   },
