--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1297,16 +1297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 48b966a] 8-firstdelete\n",
-      " 2 files changed, 143 insertions(+), 2 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/8-firstdelete\n"
+      "[main 3f22ebb] 8. James Bond\n",
+      " 2 files changed, 44 insertions(+), 32 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/8-James_Bond\n"
      ]
     },
     {
@@ -1314,7 +1314,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   4f4b402..48b966a  main -> main\n"
+      "   33ba3fc..3f22ebb  main -> main\n"
      ]
     }
    ],
@@ -1334,7 +1334,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 9.Bye bye My first directory</h4>\n",
+    "<h4> 9. John Doe</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1344,70 +1344,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Delete the directory `my_first_directory` that is in the `/tmp` directory.\n",
+    "##### Write a script that sets the mode of the file `hello` to this:\n",
     "\n",
-    "##### Example:\n",
     "```bash\n",
-    "$ ./9-firstdirdeletion\n",
-    "$ file /tmp/my_first_directory\n",
-    "/tmp/my_first_directory: cannot open `/tmp/my_first_directory' (No such file or directory)\n",
-    "$\n",
+    "-rwxr-x-wx 1 julien julien 23 Sep 20 14:25 hello\n",
     "```\n",
+    "\n",
+    "* The file `hello` will be in the working directory\n",
+    "* You are not allowed to use commas for this script\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `  9-firstdirdeletion`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `9-John_Doe`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x00-shell_basics/9-firstdirdeletion\n"
+      "Writing 0x00-shell_basics/9-John_Doe\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/9-firstdirdeletion\n",
+    "%%file 0x00-shell_basics/9-John_Doe\n",
     "#!/bin/bash\n",
-    "rm -rf /tmp/my_first_directory/"
+    "chmod 753 hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/my_first_directory: cannot open `/tmp/my_first_directory' (No such file or directory)\n",
-      "pyright-9863-3yBGUfZlxDqq\n",
-      "pyright-9863-9QzMys6VU6ZY\n",
-      "pyright-9863-gyFPUbndjCI5\n",
-      "pyright-9863-hqvX5SBuKjzU\n",
-      "python-languageserver-cancellation\n",
-      "snap-private-tmp\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-ModemManager.service-2xfSxf\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-logind.service-vJoCkf\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-resolved.service-n0ZkLf\n"
+      "total 164\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:43 0x00-shell_basics\n",
+      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:10 0x01-shell_permissions\n",
+      "-rw-r--r-- 1 elkomy elkomy 73070 Mar  9 20:43 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
+      "-rwxr-x-wx 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
+      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
+      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/9-firstdirdeletion\n",
-    "./0x00-shell_basics/9-firstdirdeletion\n",
-    "file /tmp/my_first_directory\n",
-    "ls /tmp/\n"
+    "chmod u+x 0x00-shell_basics/9-John_Doe\n",
+    "./0x00-shell_basics/9-John_Doe\n",
+    "ls -l\n"
    ]
   },
   {
@@ -1436,7 +1433,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"9-firstdirdeletion\"\n",
+    "git commit -m \"9-John Do\"\n",
     "git push"
    ]
   },
