--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1362,14 +1362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/9-John_Doe\n"
+      "Overwriting 0x00-shell_basics/9-John_Doe\n"
      ]
     }
    ],
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
       "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:43 0x00-shell_basics\n",
       "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
       "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:10 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 73070 Mar  9 20:43 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy 72732 Mar  9 20:45 0x01-shell_permissions.ipynb\n",
       "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
       "-rwxr-x-wx 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
       "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
@@ -1402,23 +1402,22 @@
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/9-John_Doe\n",
     "./0x00-shell_basics/9-John_Doe\n",
     "ls -l\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3431094] 9-firstdirdeletion\n",
-      " 2 files changed, 11 insertions(+), 20 deletions(-)\n",
-      " mode change 100644 => 100755 0x00-shell_basics/9-firstdirdeletion\n"
+      "[main 1fa9a06] 9-John Doe\n",
+      " 2 files changed, 33 insertions(+), 34 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/9-John_Doe\n"
      ]
     },
     {
@@ -1426,14 +1425,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   86d5bc6..3431094  main -> main\n"
+      "   3f22ebb..1fa9a06  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"9-John Do\"\n",
+    "git commit -m \"9-John Doe\"\n",
     "git push"
    ]
   },
