--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1362,28 +1362,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x00-shell_basics/9-John_Doe\n"
+      "Writing 0x01-shell_permissions/9-John_Doe\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/9-John_Doe\n",
+    "%%file 0x01-shell_permissions/9-John_Doe\n",
     "#!/bin/bash\n",
     "chmod 753 hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 1: ./0x01-shell_permissions/9-John_Doe: Permission denied\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1391,8 +1398,8 @@
       "total 164\n",
       "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:43 0x00-shell_basics\n",
       "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:10 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 72732 Mar  9 20:45 0x01-shell_permissions.ipynb\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:46 0x01-shell_permissions\n",
+      "-rw-r--r-- 1 elkomy elkomy 72682 Mar  9 20:46 0x01-shell_permissions.ipynb\n",
       "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
       "-rwxr-x-wx 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
       "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
@@ -1402,22 +1409,21 @@
    ],
    "source": [
     "%%bash\n",
-    "./0x00-shell_basics/9-John_Doe\n",
+    "./0x01-shell_permissions/9-John_Doe\n",
     "ls -l\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1fa9a06] 9-John Doe\n",
-      " 2 files changed, 33 insertions(+), 34 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/9-John_Doe\n"
+      "[main d778dd8] 9-John Doe\n",
+      " 1 file changed, 10 insertions(+), 11 deletions(-)\n"
      ]
     },
     {
@@ -1425,7 +1431,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3f22ebb..1fa9a06  main -> main\n"
+      "   1fa9a06..d778dd8  main -> main\n"
      ]
     }
    ],
