--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1362,14 +1362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/9-John_Doe\n"
+      "Overwriting 0x01-shell_permissions/9-John_Doe\n"
      ]
     }
    ],
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1396,10 +1396,10 @@
      "output_type": "stream",
      "text": [
       "total 164\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:43 0x00-shell_basics\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:47 0x00-shell_basics\n",
       "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
       "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:46 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 72682 Mar  9 20:46 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy 72978 Mar  9 20:48 0x01-shell_permissions.ipynb\n",
       "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
       "-rwxr-x-wx 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
       "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
@@ -1415,15 +1415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d778dd8] 9-John Doe\n",
-      " 1 file changed, 10 insertions(+), 11 deletions(-)\n"
+      "[main 56512f7] 9-John Doe\n",
+      " 2 files changed, 18 insertions(+), 12 deletions(-)\n",
+      " rename {0x00-shell_basics => 0x01-shell_permissions}/9-John_Doe (100%)\n",
+      " mode change 100755 => 100644\n"
      ]
     },
     {
@@ -1431,7 +1433,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1fa9a06..d778dd8  main -> main\n"
+      "   d778dd8..56512f7  main -> main\n"
      ]
     }
    ],
