--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1381,16 +1381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bash: line 1: ./0x01-shell_permissions/9-John_Doe: Permission denied\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1399,7 +1392,7 @@
       "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:47 0x00-shell_basics\n",
       "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
       "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:46 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 72978 Mar  9 20:48 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy 72905 Mar  9 21:02 0x01-shell_permissions.ipynb\n",
       "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
       "-rwxr-x-wx 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
       "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
@@ -1409,23 +1402,22 @@
    ],
    "source": [
     "%%bash\n",
+    "chmod u+x 0x01-shell_permissions/9-John_Doe\n",
     "./0x01-shell_permissions/9-John_Doe\n",
     "ls -l\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 56512f7] 9-John Doe\n",
-      " 2 files changed, 18 insertions(+), 12 deletions(-)\n",
-      " rename {0x00-shell_basics => 0x01-shell_permissions}/9-John_Doe (100%)\n",
-      " mode change 100755 => 100644\n"
+      "[main 1cf6806] 9-John Doe\n",
+      " 1 file changed, 11 insertions(+), 9 deletions(-)\n"
      ]
     },
     {
@@ -1433,7 +1425,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   d778dd8..56512f7  main -> main\n"
+      "   56512f7..1cf6806  main -> main\n"
      ]
     }
    ],
