--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1409,15 +1409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1cf6806] 9-John Doe\n",
-      " 1 file changed, 11 insertions(+), 9 deletions(-)\n"
+      "[main e8a0ede] 9-John Doe\n",
+      " 2 files changed, 8 insertions(+), 16 deletions(-)\n",
+      " mode change 100644 => 100755 0x01-shell_permissions/9-John_Doe\n"
      ]
     },
     {
@@ -1425,7 +1426,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   56512f7..1cf6806  main -> main\n"
+      "   1cf6806..e8a0ede  main -> main\n"
      ]
     }
    ],
@@ -1445,7 +1446,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 10.Back to the future</h4>\n",
+    "<h4> 10.Look in the mirror</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1455,19 +1456,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that changes the working directory to the previous one.\n",
+    "##### Write a script that sets the mode of the file hello the same as olleh’s mode.\n",
+    "\n",
+    "* The file `hello` will be in the working directory\n",
+    "* The file `olleh` will be in the working directory\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp$ pwd\n",
-    "/tmp\n",
-    "julien@ubuntu:/tmp$ cd /var\n",
-    "julien@ubuntu:/var$ pwd\n",
-    "/var\n",
-    "julien@ubuntu:/var$ source ./10-back\n",
-    "/tmp\n",
-    "julien@ubuntu:/tmp$ pwd\n",
-    "/tmp\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 42 Sep 20 14:45 10-mirror_permissions\n",
+    "-rwxr-x-wx 1 julien julien 23 Sep 20 14:25 hello\n",
+    "-rw-rw-r-- 1 julien julien  0 Sep 20 14:43 olleh\n",
+    "julien@ubuntu:/tmp/h$ ./10-mirror_permissions \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 42 Sep 20 14:45 10-mirror_permissions\n",
+    "-rw-rw-r-- 1 julien julien 23 Sep 20 14:25 hello\n",
+    "-rw-rw-r-- 1 julien julien  0 Sep 20 14:43 olleh\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
+    "Note: the mode of `olleh` will not always be 664. Make sure your script works for any mode.\n",
     "\n",
     "#### Repo:\n",
     "\n",
@@ -1478,33 +1486,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/10-back\n"
+      "Overwriting 0x01-shell_permissions/10-mirror_permissions\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/10-back\n",
+    "%%file 0x01-shell_permissions/10-mirror_permissions\n",
     "#!/bin/bash\n",
-    "cd -"
+    "chmod --reference=olleh hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "./0x00-shell_basics/10-back: line 2: cd: OLDPWD not set\n"
+      "chmod: failed to get attributes of 'olleh': No such file or directory\n"
      ]
     },
     {
@@ -1517,8 +1525,8 @@
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/10-back\n",
-    "source ./0x00-shell_basics/10-back\n",
+    "chmod u+x 0x01-shell_permissions/10-mirror_permissions\n",
+    "source ./0x01-shell_permissions/10-mirror_permissions\n",
     "pwd\n"
    ]
   },
@@ -1548,7 +1556,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"10-back\"\n",
+    "git commit -m \"olleh\"\n",
     "git push"
    ]
   },
