--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1532,16 +1532,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main cbf178f] 10-back\n",
-      " 2 files changed, 125 insertions(+), 6 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/10-back\n"
+      "[main 0a15ffa] olleh\n",
+      " 2 files changed, 34 insertions(+), 24 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/10-mirror_permissions\n"
      ]
     },
     {
@@ -1549,7 +1549,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3431094..cbf178f  main -> main\n"
+      "   e8a0ede..0a15ffa  main -> main\n"
      ]
     }
    ],
