--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1532,16 +1532,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 0a15ffa] olleh\n",
-      " 2 files changed, 34 insertions(+), 24 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/10-mirror_permissions\n"
+      "[main f9834e8] olleh\n",
+      " 1 file changed, 5 insertions(+), 5 deletions(-)\n"
      ]
     },
     {
@@ -1549,7 +1548,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e8a0ede..0a15ffa  main -> main\n"
+      "   0a15ffa..f9834e8  main -> main\n"
      ]
     }
    ],
@@ -1569,7 +1568,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 11.Lists</h4>\n",
+    "<h4> 11.Directories</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1579,95 +1578,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that lists all files (even ones with names beginning with a period character, which are normally hidden) in the current directory and the parent of the working directory and the `/boot` directory (in this order), in long format.\n",
+    "##### Create a script that adds execute permission to all subdirectories of the current directory for the owner, the group owner and all other users.\n",
+    "\n",
+    "Regular files should not be changed.\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `11-lists`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `11-directories_permissions`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x00-shell_basics/11-lists\n"
+      "Writing 0x01-shell_permissions/11-directories_permissions\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/11-lists\n",
+    "%%file 0x01-shell_permissions/11-directories_permissions\n",
     "#!/bin/bash\n",
-    "ls -la . .. /boot"
+    "chmod -R ugo+X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "chmod: missing operand after ‘ugo+X’\n",
+      "Try 'chmod --help' for more information.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".:\n",
-      "total 72\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 27 21:55 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 27 21:54 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
-      "-rw-r--r--  1 elkomy elkomy 46579 Feb 27 21:57 alx-system_engineering-devops.ipynb\n",
-      "\n",
-      "..:\n",
-      "total 132\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 .\n",
-      "drwxr-xr-x  3 root   root    4096 Feb  9 21:36 ..\n",
-      "-rw-------  1 elkomy elkomy  2135 Feb 25 04:50 .bash_history\n",
-      "-rw-r--r--  1 elkomy elkomy   220 Feb  9 21:36 .bash_logout\n",
-      "-rw-r--r--  1 elkomy elkomy  4250 Feb 10 10:53 .bashrc\n",
-      "drwx------  4 elkomy elkomy  4096 Feb 10 11:16 .cache\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 10 11:02 .conda\n",
-      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 11:01 .dotnet\n",
-      "-rw-r--r--  1 elkomy elkomy    56 Feb 10 16:01 .gitconfig\n",
-      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 11:50 .ipython\n",
-      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 24 17:51 .jupyter\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb  9 21:36 .landscape\n",
-      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 10:54 .local\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb 27 20:37 .motd_shown\n",
-      "drwx------  3 elkomy elkomy  4096 Feb 10 11:02 .nv\n",
-      "-rw-r--r--  1 elkomy elkomy   807 Feb  9 21:36 .profile\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb  9 22:01 .sudo_as_admin_successful\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 10 19:07 .vscode\n",
-      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 10 10:58 .vscode-remote-containers\n",
-      "drwxr-xr-x  5 elkomy elkomy  4096 Feb 10 10:58 .vscode-server\n",
-      "-rw-r--r--  1 elkomy elkomy   478 Feb 10 10:53 .zshrc\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 alx-system_engineering-devops\n",
-      "-rw-r--r--  1 elkomy elkomy 32288 Feb 10 18:47 alx-system_engineering-devops.ipynb\n",
-      "drwxr-xr-x 32 elkomy elkomy  4096 Feb 10 10:52 anaconda3\n",
-      "-rw-r--r--  1 elkomy elkomy  3853 Feb 10 18:49 control.ipynb\n",
-      "drwxr-xr-x  3 elkomy elkomy  4096 Feb 24 21:02 cplayground\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 10 13:15 zero_day\n",
-      "\n",
-      "/boot:\n",
-      "total 8\n",
-      "drwxr-xr-x  2 root root 4096 May 31  2023 .\n",
-      "drwxr-xr-x 19 root root 4096 Feb 27 20:37 ..\n",
       "/home/elkomy/alx-system_engineering-devops\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/11-lists\n",
-    "source ./0x00-shell_basics/11-lists\n",
+    "chmod u+x 0x01-shell_permissions/11-directories_permissions\n",
+    "source ./0x01-shell_permissions/11-directories_permissions\n",
     "pwd\n"
    ]
   },
@@ -1696,7 +1661,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"11-lists\"\n",
+    "git commit -m \"11-directories_permissions\"\n",
     "git push"
    ]
   },
