--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1591,36 +1591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/11-directories_permissions\n"
+      "Overwriting 0x01-shell_permissions/11-directories_permissions\n"
      ]
     }
    ],
    "source": [
     "%%file 0x01-shell_permissions/11-directories_permissions\n",
     "#!/bin/bash\n",
-    "chmod -R ugo+X"
+    "chmod -R ugo+X ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "chmod: missing operand after ‘ugo+X’\n",
-      "Try 'chmod --help' for more information.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1638,15 +1630,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f504d26] 11-lists\n",
-      " 1 file changed, 4 insertions(+), 5 deletions(-)\n"
+      "[main 1a92d84] 11-directories_permissions\n",
+      " 3 files changed, 29 insertions(+), 62 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/11-directories_permissions\n"
      ]
     },
     {
@@ -1654,7 +1647,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ba21aaf..f504d26  main -> main\n"
+      "   f9834e8..1a92d84  main -> main\n"
      ]
     }
    ],
