--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1630,16 +1630,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1a92d84] 11-directories_permissions\n",
-      " 3 files changed, 29 insertions(+), 62 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/11-directories_permissions\n"
+      "[main 8950d55] 11-directories_permissions\n",
+      " 2 files changed, 10 insertions(+), 17 deletions(-)\n"
      ]
     },
     {
@@ -1647,7 +1646,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f9834e8..1a92d84  main -> main\n"
+      "   1a92d84..8950d55  main -> main\n"
      ]
     }
    ],
@@ -1667,7 +1666,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 12.File type</h4>\n",
+    "<h4> 12.More directoreis></h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1677,56 +1676,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that prints the type of the file named `iamafile`. The file `iamafile` will be in the `/tmp` directory when we will run your script.\n",
+    "##### Create a script that creates a directory called `my_dir` with permissions 751 in the working directory.\n",
     "\n",
-    "##### Example\n",
+    "\n",
     "```bash\n",
-    "ubuntu@ip-172-31-63-244:~$ ./12-file_type\n",
-    "/tmp/iamafile: ELF 64-bit LSB  executable, x86-64, version 1 (SYSV), dynamically linked (uses shared libs), for GNU/Linux 2.6.24, BuildID[sha1]=bd39c07194a778ccc066fc963ca152bdfaa3f971, stripped\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 20\n",
+    "-rwxrwxr-x 1 julien julien   39 Sep 20 14:59 12-directory_permissions\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
+    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ ./12-directory_permission s\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien   39 Sep 20 14:59 12-directory_permissions\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
+    "drwxr-x--x 2 julien julien 4096 Sep 20 14:59 my_dir\n",
+    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `12-file_type`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `12-directory_permissions`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/12-file_type\n"
+      "Overwriting 0x01-shell_permissions/12-directory_permissions\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/12-file_type\n",
+    "%%file 0x01-shell_permissions/12-directory_permissions\n",
     "#!/bin/bash\n",
-    "file /tmp/iamafile"
+    "mkdir -m 751 my_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp/iamafile: cannot open `/tmp/iamafile' (No such file or directory)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/12-file_type\n",
-    "source ./0x00-shell_basics/12-file_type"
+    "chmod u+x 0x01-shell_permissions/12-directory_permissions\n",
+    "source ./0x01-shell_permissions/12-directory_permissions"
    ]
   },
   {
@@ -1755,7 +1761,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"12-file_type\"\n",
+    "git commit -m \"12-directory_permissions\"\n",
     "git push"
    ]
   },
