--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1737,16 +1737,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 94a5f7f] 12-file_type\n",
-      " 2 files changed, 106 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/12-file_type\n"
+      "[main 4266f1e] 12-directory_permissions\n",
+      " 2 files changed, 37 insertions(+), 29 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/12-directory_permissions\n"
      ]
     },
     {
@@ -1754,7 +1754,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f504d26..94a5f7f  main -> main\n"
+      "   8950d55..4266f1e  main -> main\n"
      ]
     }
    ],
@@ -1774,7 +1774,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 13. We are symbols, and inhabit symbols</h4>\n",
+    "<h4> 13. Change group</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1784,73 +1784,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a symbolic link to `/bin/ls`, named `__ls__`. The symbolic link should be created in the current working directory.\n",
+    "##### Write a script that changes the group owner to school for the file hello\n",
     "\n",
-    "##### Example\n",
+    "* The file hello will be in the working directory\n",
+    "\n",
     "```bash\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
-    "total 144\n",
-    "drwxrwxr-x  2 ubuntu ubuntu   4096 Sep 20 03:24 .\n",
-    "drwxrwxrwt 12 root   root   139264 Sep 20 03:24 ..\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$./13-symbolic_link\n",
-    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
-    "total 144\n",
-    "drwxrwxr-x  2 ubuntu ubuntu   4096 Sep 20 03:24 .\n",
-    "drwxrwxrwt 12 root   root   139264 Sep 20 03:24 ..\n",
-    "lrwxrwxrwx  1 ubuntu ubuntu      7 Sep 20 03:24 __ls__ -> /bin/ls\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien   34 Sep 20 15:03 13-change_group\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
+    "drwxr-x--x 2 julien julien 4096 Sep 20 14:59 my_dir\n",
+    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ sudo ./13-change_group \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien      34 Sep 20 15:03 13-change_group\n",
+    "drwx--x--x 2 julien julien    4096 Sep 20 14:49 dir0\n",
+    "drwx--x--x 2 julien julien    4096 Sep 20 14:49 dir1\n",
+    "drwx--x--x 2 julien julien    4096 Sep 20 14:49 dir2\n",
+    "drwxr-x--x 2 julien julien    4096 Sep 20 14:59 my_dir\n",
+    "-rw-rw-r-- 1 julien school   23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `13-symbolic_link`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `13-change_group`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/13-symbolic_link\n"
+      "Writing 0x01-shell_permissions/13-change_group\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/13-symbolic_link\n",
+    "%%file 0x01-shell_permissions/13-change_group\n",
     "#!/bin/bash\n",
-    "ln -s /bin/ls __ls__"
+    "chown :school hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "total 80\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:25 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:25 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:24 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
-      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 53716 Feb 28 00:26 alx-system_engineering-devops.ipynb\n"
+      "chown: invalid group: ‘:school’\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'chmod u+x 0x01-shell_permissions/13-change_group\\nsource ./0x01-shell_permissions/13-change_group\\n'' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/13-change_group\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/13-change_group\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'chmod u+x 0x01-shell_permissions/13-change_group\\nsource ./0x01-shell_permissions/13-change_group\\n'' returned non-zero exit status 1."
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/13-symbolic_link\n",
-    "#source ./0x00-shell_basics/13-symbolic_link\n",
-    "ls -la"
+    "chmod u+x 0x01-shell_permissions/13-change_group\n",
+    "source ./0x01-shell_permissions/13-change_group"
    ]
   },
   {
@@ -1878,7 +1892,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"13-symbolic_link\"\n",
+    "git commit -m \"ghange group\"\n",
     "git push"
    ]
   },
