0x01-shell_permissions/100-change_owner_and_group

--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1869,15 +1869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d2e757b] 13-symbolic_link\n",
-      " 1 file changed, 26 insertions(+), 8 deletions(-)\n"
+      "[main 048565d] ghange group\n",
+      " 2 files changed, 55 insertions(+), 39 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/13-change_group\n"
      ]
     },
     {
@@ -1885,7 +1886,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e07588b..d2e757b  main -> main\n"
+      "   4266f1e..048565d  main -> main\n"
      ]
     }
    ],
@@ -1905,7 +1906,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 14. Copy HTML files</h4>\n",
+    "<h4> 14. Owner and group</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1915,71 +1916,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that copies all the HTML files from the current working directory to the parent of the working directory, but only copy files that did not exist in the parent of the working directory or were newer than the versions in the parent of the working directory.\n",
+    "##### Write a script that changes the owner to vincent and the group owner to staff for all the files and directories in the working directory.\n",
     "\n",
-    "##### You can consider that all HTML files have the extension `.html`\n",
+    " \n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 julien julien   36 Sep 20 15:06 100-change_owner_and_group\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir0\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir1\n",
+    "drwx--x--x 2 julien julien 4096 Sep 20 14:49 dir2\n",
+    "drwxr-x--x 2 julien julien 4096 Sep 20 14:59 my_dir\n",
+    "-rw-rw-r-- 1 julien julien   23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ sudo ./100-change_owner_and_group \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 24\n",
+    "-rwxrwxr-x 1 vincent staff   36 Sep 20 15:06 100-change_owner_and_group\n",
+    "drwx--x--x 2 vincent staff 4096 Sep 20 14:49 dir0\n",
+    "drwx--x--x 2 vincent staff 4096 Sep 20 14:49 dir1\n",
+    "drwx--x--x 2 vincent staff 4096 Sep 20 14:49 dir2\n",
+    "drwxr-x--x 2 vincent staff 4096 Sep 20 14:59 my_dir\n",
+    "-rw-rw-r-- 1 vincent staff   23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
+    "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `14-copy_html`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `100-change_owner_and_group`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x00-shell_basics/14-copy_html\n"
+      "Writing 0x01-shell_permissions/100-change_owner_and_group\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/14-copy_html\n",
+    "%%file 0x01-shell_permissions/100-change_owner_and_group\n",
     "#!/bin/bash\n",
-    "cp -u  *.html .."
+    "chown vincent:staff ./*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "cp: cannot stat '*.html': No such file or directory\n"
+      "chown: invalid user: ‘vincent:staff’\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 80\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:42 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:37 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
-      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 56901 Feb 28 00:43 alx-system_engineering-devops.ipynb\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:43 test.HTML\n"
+     "ename": "CalledProcessError",
+     "evalue": "Command 'b'\\nchmod u+x 0x01-shell_permissions/100-change_owner_and_group\\nsource ./0x01-shell_permissions/100-change_owner_and_group\\n'' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_cell_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbash\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mchmod u+x 0x01-shell_permissions/100-change_owner_and_group\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msource ./0x01-shell_permissions/100-change_owner_and_group\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:154\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 154\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshebang(line, cell)\n",
+      "File \u001b[0;32m~/anaconda3/envs/cplayground/lib/python3.11/site-packages/IPython/core/magics/script.py:314\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 314\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'\\nchmod u+x 0x01-shell_permissions/100-change_owner_and_group\\nsource ./0x01-shell_permissions/100-change_owner_and_group\\n'' returned non-zero exit status 1."
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "touch ./test.HTML\n",
-    "chmod u+x 0x00-shell_basics/14-copy_html\n",
-    "source ./0x00-shell_basics/14-copy_html\n",
-    "ls -la"
+    "\n",
+    "chmod u+x 0x01-shell_permissions/100-change_owner_and_group\n",
+    "source ./0x01-shell_permissions/100-change_owner_and_group\n"
    ]
   },
   {
@@ -2007,7 +2025,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"14-copy_html\"\n",
+    "git commit -m \"0x01-shell_permissions/100-change_owner_and_group\"\n",
     "git push"
    ]
   },
